--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "begin-app",
+  "version": "0.0.0",
+  "description": "Begin basic Svelte app + API",
+  "scripts": {
+    "build": "rollup -c",
+    "autobuild": "rollup -c -w",
+    "dev": "run-p start autobuild",
+    "start": "npm run build && npx sandbox",
+    "start:sandbox": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
+    "test": "cross-env NODE_ENV=testing tape test/*-test.js"
+  },
   "devDependencies": {
-    "@architect/architect": "^6.0.10",
+    "@architect/sandbox": "latest",
+    "cross-env": "^5.2.1",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.21.2",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -10,14 +20,9 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.12.1"
-  },
-  "dependencies": {},
-  "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "npx sandbox",
-    "start:dev": "npm run build && npx sandbox"
+    "svelte": "^3.12.1",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.11.0",
+    "tiny-json-http": "^7.1.2"
   }
 }
