--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start autobuild",
+    "lint": "eslint src --ignore-pattern node_modules --fix",
     "start": "npm run build && npx sandbox",
     "start:sandbox": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
     "test": "cross-env NODE_ENV=testing tape test/*-test.js"
   },
   "devDependencies": {
     "@architect/sandbox": "latest",
+    "@begin/data": "^1.1.2",
     "cross-env": "^5.2.1",
+    "eslint": "^6.3.0",
+    "eslint-plugin-svelte3": "^2.7.3",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.21.2",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-livereload": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-svelte": "^5.1.0",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.12.1",
     "tap-spec": "^5.0.0",
