--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "eslint src --ignore-pattern node_modules --fix",
     "start": "npm run build && npx sandbox",
     "start:sandbox": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
-    "test": "cross-env NODE_ENV=testing tape test/*-test.js"
+    "test": "cross-env NODE_ENV=testing PORT=6666 tape test/*-test.js ./test/**/*-test.js | tap-spec"
   },
   "devDependencies": {
     "@architect/sandbox": "latest",
-    "@begin/data": "^1.1.2",
+    "@begin/data": "^1.1.4",
     "cross-env": "^5.2.1",
-    "eslint": "^6.3.0",
+    "eslint": "^6.4.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.21.2",
+    "rollup": "^1.21.4",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-livereload": "^1.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
