Updates svelte/template to latest per Rich Harris tweet.

--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "devDependencies": {
     "@architect/sandbox": "latest",
-    "@begin/data": "^1.2.0",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.6.0",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^1.26.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-livereload": "^1.0.4",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.12.1",
-    "tap-spec": "^5.0.0",
-    "tape": "^4.11.0",
-    "tiny-json-http": "^7.1.2"
+    "@begin/data": "latest",
+    "cross-env": "",
+    "eslint": "",
+    "eslint-plugin-svelte3": "",
+    "npm-run-all": "",
+    "rollup": "",
+    "rollup-plugin-commonjs": "",
+    "rollup-plugin-livereload": "",
+    "rollup-plugin-node-resolve": "",
+    "rollup-plugin-svelte": "",
+    "rollup-plugin-terser": "",
+    "svelte": "",
+    "tap-spec": "",
+    "tape": "",
+    "tiny-json-http": ""
   }
 }
