--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "autobuild": "rollup -c -w",
     "dev": "run-p start autobuild",
     "lint": "eslint src --ignore-pattern node_modules --fix",
-    "start": "npm run build && npx sandbox",
+    "start": "run-s build sandbox",
+    "sandbox": "npx sandbox",
     "start:sandbox": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
     "test": "cross-env NODE_ENV=testing PORT=6666 tape test/*-test.js ./test/**/*-test.js | tap-spec"
   },
