--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start autobuild",
-    "lint": "eslint src --ignore-pattern node_modules --fix",
+    "lint": "eslint src",
     "start": "run-s build sandbox",
     "sandbox": "npx sandbox",
     "start:sandbox": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
@@ -15,19 +15,19 @@
   "devDependencies": {
     "@architect/sandbox": "latest",
     "@begin/data": "latest",
-    "cross-env": "",
-    "eslint": "",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.1.0",
     "eslint-plugin-svelte3": "",
-    "npm-run-all": "",
-    "rollup": "",
-    "rollup-plugin-commonjs": "",
-    "rollup-plugin-livereload": "",
-    "rollup-plugin-node-resolve": "",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^2.10.8",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "",
-    "rollup-plugin-terser": "",
+    "rollup-plugin-terser": "^6.0.1",
     "svelte": "",
-    "tap-spec": "",
-    "tape": "",
-    "tiny-json-http": ""
+    "tap-spec": "^5.0.0",
+    "tape": "^5.0.0",
+    "tiny-json-http": "^7.2.0"
   }
 }
