--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm install
 
     - name: Lint
-      run: npm lint
+      run: npm run lint
 
     - name: Test
       run: npm test
