--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start autobuild",
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "start": "run-s build sandbox",
     "sandbox": "npx sandbox",
     "start:sandbox": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
