--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "cross-env NODE_ENV=testing PORT=6666 tape test/*-test.js ./test/**/*-test.js | tap-spec"
   },
   "devDependencies": {
-    "@architect/sandbox": "latest",
+    "@architect/sandbox": "2.0",
     "@begin/data": "latest",
     "cross-env": "^7.0.2",
     "eslint": "^7.9.0",
