--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
   "devDependencies": {
     "@architect/sandbox": "latest",
     "@begin/data": "latest",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eslint-plugin-svelte3": "",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.34.2",
-    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.0.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-svelte": "",
-    "rollup-plugin-terser": "^7.0.2",
-    "svelte": "",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.0.0",
     "tap-spec": "^5.0.0",
     "tape": "^5.0.1",
     "tiny-json-http": "^7.3.0"
-  }
+  },
+  "dependencies": {}
 }
