--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "rollup -c -w",
     "lint": "eslint src --fix",
     "start": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
-    "test": "cross-env NODE_ENV=testing PORT=6666 tape test/*-test.js ./test/**/*-test.js | tap-spec"
+    "test": "cross-env PORT=6666 tape test/*-test.js | tap-spec"
   },
   "devDependencies": {
     "@architect/sandbox": "latest",
