--- a/package.json
+++ b/package.json
@@ -6,27 +6,42 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "lint": "eslint src --fix",
-    "start": "cross-env NODE_ENV=testing ARC_LOCAL=1 npx sandbox",
-    "test": "cross-env PORT=6666 tape test/*-test.js | tap-spec"
+    "start": "npx sandbox"
+  },
+  "arc": {
+    "app": "svelte-app",
+    "http": [
+      {
+        "/api": {
+          "method": "get",
+          "src": "/api"
+        }
+      }
+    ],
+    "tables": [
+      {
+        "data": {
+          "scopeID": "*String",
+          "dataID": "**String",
+          "ttl": "TTL"
+        }
+      }
+    ]
   },
   "devDependencies": {
-    "@architect/sandbox": "latest",
-    "@begin/data": "latest",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
-    "cross-env": "^7.0.3",
     "eslint": "^7.19.0",
     "eslint-plugin-svelte3": "",
-    "npm-run-all": "^4.1.5",
     "rollup": "^2.38.5",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.32.3",
-    "tap-spec": "^5.0.0",
-    "tape": "^5.1.1",
-    "tiny-json-http": "^7.3.0"
+    "svelte": "^3.32.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@architect/sandbox": "^3.3.7",
+    "@begin/data": "^1.2.3"
+  }
 }
